replace np types

--- a/Notebooks_MFD/Practice 05 - Recap - Building an ItemKNN from scratch.ipynb
+++ b/Notebooks_MFD/Practice 05 - Recap - Building an ItemKNN from scratch.ipynb
@@ -78,10 +78,10 @@
     "                       sep=\"::\", \n",
     "                       names=[\"user_id\", \"item_id\", \"ratings\", \"timestamp\"],\n",
     "                       header=None,\n",
-    "                       dtype={\"user_id\": np.int32,\n",
-    "                               \"item_id\": np.int32,\n",
-    "                               \"ratings\": np.int32,\n",
-    "                               \"timestamp\": np.int64})"
+    "                       dtype={\"user_id\": int32,\n",
+    "                               \"item_id\": int32,\n",
+    "                               \"ratings\": int32,\n",
+    "                               \"timestamp\": int64})"
    ]
   },
   {
