--- a/Notebooks_MFD/Practice extra - Cython for KNN similarity.ipynb
+++ b/Notebooks_MFD/Practice extra - Cython for KNN similarity.ipynb
@@ -1311,8 +1311,8 @@
     "        # Data structure to incrementally build sparse matrix\n",
     "        # Preinitialize max possible length\n",
     "        cdef double[:] values = np.zeros((self.n_items*self.TopK))\n",
-    "        cdef int[:] rows = np.zeros((self.n_items*self.TopK,), dtype=np.int32)\n",
-    "        cdef int[:] cols = np.zeros((self.n_items*self.TopK,), dtype=np.int32)\n",
+    "        cdef int[:] rows = np.zeros((self.n_items*self.TopK,), dtype=int32)\n",
+    "        cdef int[:] cols = np.zeros((self.n_items*self.TopK,), dtype=int32)\n",
     "        cdef long sparse_data_pointer = 0\n",
     "\n",
     "\n",
