BEST SUB TILL NOW

--- a/Notebook/CreateSubmission.ipynb
+++ b/Notebook/CreateSubmission.ipynb
@@ -12,6 +12,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#BEST PARAMS\n",
+    "\n",
+    "DICT_RP3 = {'topK': 29, 'alpha': 0.33723025040409343, 'beta': 0.15542352567862933, 'normalize_similarity': True}\n",
+    "\n",
+    "DICT_SLIMEN = {'topK': 638, 'l1_ratio': 0.026639245044358113, 'alpha': 0.001535792379351249}\n",
+    "\n",
+    "DICT_IALS = {'use_gpu': True, 'num_threads' : 1, 'num_factors': 128, 'epochs': 478, 'confidence_scaling': 'linear', 'alpha': 3.358295366834473, 'epsilon': 7.295986722921583, 'reg': 6.292360640597378e-05}\n",
+    "\n",
+    "DICT_KNN = {'topK': 19, 'shrink': 28, 'similarity': 'tversky', 'normalize': True, 'tversky_alpha': 0.0, 'tversky_beta': 1.3672226785339947}\n",
+    "\n",
+    "DICT_HYBIRD = {'alpha1': 0.6464483146524337, 'alpha2': 0.7533801103113421, 'alpha3': 0.032576355148477586, 'min_interaction': 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -243,14 +262,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-03 23:45:45.352646: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2024-01-03 23:45:45.352672: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2024-01-04 21:58:24.292581: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2024-01-04 21:58:24.292644: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
    "source": [
     "from Recommenders.Recommender_import_list import *\n",
-    "from Recommenders.KNN.ItemKNNSimilarityHybridRecommender import ItemKNNSimilarityHybridRecommender"
+    "from Recommenders.KNN.ItemKNNSimilarityHybridRecommender import ItemKNNSimilarityHybridRecommender\n",
+    "from Recommenders.Hybrid.GeneralizedLinearHybridRecommenderCold import GeneralizedLinearHybridRecommenderCold\n",
+    "from Recommenders.MatrixFactorization.ImplicitIALSRecommender import ImplicitALSRecommender"
    ]
   },
   {
@@ -262,29 +283,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RP3betaRecommender: Loading model from file 'result_experiments_parallel/HybridBasesRP3betaRecommender_urm_all.zip'\n",
+      "RP3betaRecommender: Loading model from file 'result_experiments_more_data/HybridsRP3betaRecommender_all.zip'\n",
       "RP3betaRecommender: Loading complete\n",
-      "SLIMElasticNetRecommender: Loading model from file 'result_experiments_parallel/HybridBasesSLIMElasticNetRecommender_urm_all.zip'\n",
-      "SLIMElasticNetRecommender: Loading complete\n"
+      "SLIMElasticNetRecommender: Loading model from file 'result_experiments_more_data/HybridsSLIMElasticNetRecommender_all.zip'\n",
+      "SLIMElasticNetRecommender: Loading complete\n",
+      "Using gpu: True\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7c979c52d484d70b6a05a2a827c3e72",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/478 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity column 22222 (100.0%), 5519.52 column/sec. Elapsed time 4.03 sec\n"
      ]
     }
    ],
    "source": [
     "RP3 = RP3betaRecommender(urm_all,verbose=True) \n",
-    "RP3.load_model(\"result_experiments_parallel/HybridBases\", RP3.RECOMMENDER_NAME + \"_urm_all.zip\")\n",
+    "RP3.load_model(\"result_experiments_more_data/Hybrids\", RP3.RECOMMENDER_NAME + \"_all.zip\")\n",
     "\n",
     "SLIMEN = SLIMElasticNetRecommender(urm_all,verbose=True)\n",
-    "SLIMEN.load_model(\"result_experiments_parallel/HybridBases\", SLIMEN.RECOMMENDER_NAME + \"_urm_all.zip\")\n",
+    "SLIMEN.load_model(\"result_experiments_more_data/Hybrids\", SLIMEN.RECOMMENDER_NAME + \"_all.zip\")\n",
+    "\n",
+    "IALS = ImplicitALSRecommender(urm_all, verbose=True)\n",
+    "IALS.fit(**{'use_gpu': True, 'num_threads' : 1, 'num_factors': 128, 'epochs': 478, 'confidence_scaling': 'linear', 'alpha': 3.358295366834473, 'epsilon': 7.295986722921583, 'reg': 6.292360640597378e-05})\n",
+    "\n",
+    "KNN = ItemKNNCFRecommender(urm_all, verbose=True)\n",
+    "KNN.fit(**{'topK': 19, 'shrink': 28, 'similarity': 'tversky', 'normalize': True, 'tversky_alpha': 0.0, 'tversky_beta': 1.3672226785339947})\n",
     "\n",
     "W1 = RP3.W_sparse\n",
-    "W1 = (W1 - W1.min()) / (W1.max() - W1.min())\n",
+    "#W1 = (W1 - W1.min()) / (W1.max() - W1.min())\n",
     "\n",
     "W2 = SLIMEN.W_sparse\n",
-    "W2 = (W2 - W2.min()) / (W2.max() - W2.min())\n",
+    "#W2 = (W2 - W2.min()) / (W2.max() - W2.min())\n",
     "\n",
     "\n",
-    "final = ItemKNNSimilarityHybridRecommender(urm_all, W1, W2, verbose=True)\n",
-    "final.fit(**{'topK': 69, 'alpha': 0.841165262612431})\n"
+    "#final = ItemKNNSimilarityHybridRecommender(urm_all, W1, W2, verbose=True)\n",
+    "#final.fit(**{'topK': 69, 'alpha': 0.841165262612431})\n",
+    "\n",
+    "final = GeneralizedLinearHybridRecommenderCold(urm_all, KNN, [RP3, SLIMEN, IALS],True,1)\n",
+    "final.fit([0.6464483146524337, 0.7533801103113421, 0.032576355148477586])"
    ]
   },
   {
